*** When upgrading, don't forget to: "cd bin ; ./checksetup.pl" ***
*** Also, it is advisable to make a backup of your data before upgrading ***

Version 1.7.0

* Modified HTML generation so topic view output is smaller, by using
  javascript functions to reduce the HREF size for each filenumber.

Version 1.6.5

* Modified diff reader to handle diffs of the form:

  cvs diff -uN -r TAG1 -r TAG2

  This allows code reviews to occur for different development
  practices, for example, if separate branches are used for
  development, which are then reviewed, before collapsing into
  the mainline branch.

* Also modified the pre-requisite Perl module version numbers.

Version 1.6.4

* Comments associated with a specific line in a review now have the
  notion of state, which includes "Submitted" (the initial state),
  "Invalid" (indicating an invalid comment) and "Completed" (indicated
  that the comments have been addressed).  The new screen "list
  comments" allows an author of the review to see all the comments
  appropriately listed (order by line, then date), and allows for the
  mass changing of states.

  This is likely to be easier to handle than wading through a mass of
  emails.  The screen also allows for replies to comments to be easily
  made against existing comments.

Version 1.6.3

* In the topic list screen, it is now possible to selected multiple
  topics and mass update their state, or delete them.

* Improved error message reporting when topics have been deleted and
  they are trying to be viewed, or the state of a topic is attempted
  to be updated when it has already been changed by another user (ie
  the topic is "stale").

* The repository field in the create topic screen is replaced with a
  drop-down list of valid repositories.  The repositories are set in
  codestriker.conf for the configuration variable @valid_repositories.

Version 1.6.2

* Fixed warnings in checksetup.pl for MySQL databases, where "commits"
  are ignored.
