@@ -51,6 +51,7 @@ $bugtracker = "";
     (
      "/home/sits/cvs",
      "http://cvs.sourceforge.net/cgi-bin/viewcvs.cgi /cvsroot"
+     "svn:http://svn.collab.net/repos/svn/trunk"
     );
 
 # A mapping of repositories to filename viewers.  Examples of such systems
