@@ -16,6 +16,7 @@ package Codestriker::FileParser::Parser;
 use strict;
 
 use Codestriker::FileParser::CvsUnidiff;
+use Codestriker::FileParser::SubversionDiff;
 use Codestriker::FileParser::PatchUnidiff;
 use Codestriker::FileParser::UnknownFormat;
 
@@ -38,16 +39,13 @@ sub parse ($$$$) {
 							   $repository);
 	}
 
-	# Output all non-CVS files into a file.
-#	if ($#diffs == -1) {
-#	    seek($fh, 0, 0);
-#	    open(CVSFAIL, ">>/tmp/cvsfail1.txt") || die "Can't open: $!";
-#	    while ($_ = <$fh>) {
-#		print CVSFAIL $_;
-#	    }
-#	    print CVSFAIL "\n\n-----------------\n\n";
-#	    close CVSFAIL;
-#	}
+	# Check if it is a Subversion diff file.
+	if ($#diffs == -1) {
+	    seek($fh, 0, 0);
+	    @diffs =
+		Codestriker::FileParser::SubversionDiff->parse($fh,
+							       $repository);
+	}
 
 	# Check if it is a patch unidiff file.
 	if ($#diffs == -1) {
@@ -56,18 +54,6 @@ sub parse ($$$$) {
 		Codestriker::FileParser::PatchUnidiff->parse($fh,
 							     $repository);
 	}
-
-	# Output all non patch into a file.
-#	if ($#diffs == -1) {
-#	    seek($fh, 0, 0);
-#	    open(CVSFAIL, ">>/tmp/cvsfail2.txt") || die "Can't open: $!";
-#	    while ($_ = <$fh>) {
-#		print CVSFAIL $_;
-#	    }
-#	    print CVSFAIL "\n\n-----------------\n\n";
-#	    close CVSFAIL;
-	}
-
 
 	# Last stop-gap - the file format is unknown, treat it as a
 	# single file with filename "unknown".
