@@ -18,6 +18,8 @@ use strict;
 sub parse ($$) {
     my ($type, $fh) = @_;
 
+    print "UNKNOWN format\n";
+
     # Array of results found.
     my @result = ();
 
